# cpad

./: .clang-format  CMakeLists.txt
Box/: BoxApp.cpp  CMakeLists.txt
Common/: CMakeLists.txt  Camera.cpp  Camera.h  DDSTextureLoader.cpp  DDSTextureLoader.h  GameTimer.cpp  GameTimer.h  GeometryGenerator.cpp  GeometryGenerator.h  MathHelper.cpp  MathHelper.h  UploadBuffer.h  d3dApp.cpp  d3dApp.h  d3dUtil.cpp  d3dUtil.h  d3dx12.h
ImApp/: CMakeLists.txt  main12.cpp
MainApp/: CMakeLists.txt  main12.cpp
Shapes/: CMakeLists.txt  ShapesApp.cpp
TestApp/: CMakeLists.txt  main.cpp
UvDemo/: CMakeLists.txt  main.c
core/: CMakeLists.txt  core.c  core.h  plugin.h
demoplugin/: CMakeLists.txt  dp.c
